friend-management/src/main/java/com/example/friendmanagement/error/GetAllNotifiedEmailsException.java
package com.example.friendmanagement.error;

public class GetAllNotifiedEmailsException extends RuntimeException {
    private Throwable throwable;

    public GetAllNotifiedEmailsException(Throwable throwable) {
        this.throwable = throwable;
    }
}
